--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
